manifests/ack/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vtf-tools
  labels:
    app.kubernetes.io/part-of: codeserver
